--- a/FIND-E/app/src/main/res/layout/activity_main.xml
+++ b/FIND-E/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
         tools:context=".ui.main.MainActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@android:color/black"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
@@ -38,6 +37,7 @@
 
         <FrameLayout
             android:id="@+id/main_container"
+            android:background="@drawable/btn_screen_gradient_normal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbar" />
