--- a/FIND-E/app/src/main/res/layout/fragment_map.xml
+++ b/FIND-E/app/src/main/res/layout/fragment_map.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:mapbox="http://schemas.android.com/apk/res-auto">
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -41,8 +42,8 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
                 android:gravity="center"
-                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:text="@string/done_label"
                 android:textColor="@color/light_blue_pressed" />
 
@@ -56,32 +57,66 @@
             android:orientation="vertical"
             android:padding="@dimen/activity_horizontal_margin">
 
-            <io.sympli.find_e.ui.widget.TypefaceTextView
-                android:id="@+id/approximate_distance"
-                style="@style/TextRegular"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/approximate_distance_label"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:layout_gravity="center"
+                android:orientation="horizontal">
 
-            <io.sympli.find_e.ui.widget.TypefaceTextView
-                android:id="@+id/connection_lost"
-                style="@style/TextRegular"
-                android:layout_width="match_parent"
+                <io.sympli.find_e.ui.widget.TypefaceTextView
+                    style="@style/TextRegular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.6"
+                    android:gravity="center"
+                    android:paddingRight="5dp"
+                    android:text="@string/approximate_distance_label"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+                <io.sympli.find_e.ui.widget.TypefaceTextView
+                    android:id="@+id/approximate_distance"
+                    style="@style/TextRegular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/connection_lost_label"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <io.sympli.find_e.ui.widget.TypefaceTextView
+                    style="@style/TextRegular"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.6"
+                    android:gravity="center"
+                    android:paddingRight="5dp"
+                    android:text="@string/connection_lost_label"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+                <io.sympli.find_e.ui.widget.TypefaceTextView
+                    android:id="@+id/connection_lost"
+                    style="@style/TextRegular"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="5 minutes ago."
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <com.mapbox.mapboxsdk.maps.MapView
             android:id="@+id/mapview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/bottom_info"
             android:layout_below="@+id/lost_info_parent"
             mapbox:style_url="@string/mapbox_style_extremely_dark_url"
             mapbox:tilt="20"
@@ -92,6 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_alignParentBottom="true"
+            android:background="@android:color/black"
             android:orientation="horizontal">
 
             <io.sympli.find_e.ui.widget.TypefaceTextView
@@ -113,7 +149,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/last_location_label"
-                android:textColor="@{!myLocation ? @color/light_blue_pressed : @color/white}"
+                android:textColor="@{myLocation ? @color/white : @color/light_blue_pressed}"
                 android:textSize="16sp" />
         </LinearLayout>
 
