--- a/FIND-E/app/src/main/res/layout/activity_main.xml
+++ b/FIND-E/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.MainActivity"
-        android:background="@color/black">
+        android:background="@android:color/black"
+        tools:context=".ui.main.MainActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -15,8 +16,8 @@
             android:layout_height="?attr/actionBarSize"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:visibility="invisible">
+            android:visibility="invisible"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <ImageView
                 android:id="@+id/toolbar_label"
@@ -38,15 +39,32 @@
 
         <FrameLayout
             android:id="@+id/main_container"
-            android:background="@drawable/btn_screen_gradient_normal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar" />
+            android:layout_below="@+id/toolbar"
+            android:background="@drawable/btn_screen_gradient_normal" />
+
+        <ImageView
+            android:id="@+id/blurBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:translationZ="4dp"
+            android:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/partlyTransparentBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.95"
+            android:background="@drawable/btn_screen_gradient_normal"
+            android:translationZ="4dp"
+            android:visibility="invisible" />
 
         <FrameLayout
             android:id="@+id/shadow_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:translationZ="4dp" />
+
     </RelativeLayout>
 </layout>
