--- a/FIND-E/app/src/main/res/values/dimens.xml
+++ b/FIND-E/app/src/main/res/values/dimens.xml
@@ -2,6 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin_small">8dp</dimen>
+
+    <dimen name="btn_continue_top">16dp</dimen>
+    <dimen name="btn_continue_bottom">16dp</dimen>
+    <dimen name="btn_continue_left">50dp</dimen>
+    <dimen name="btn_continue_right">50dp</dimen>
 
     <dimen name="circle_number_size">42dp</dimen>
     <dimen name="circle_number_text_size">17sp</dimen>
