--- a/FIND-E/app/src/main/res/values/strings_splash.xml
+++ b/FIND-E/app/src/main/res/values/strings_splash.xml
@@ -5,6 +5,7 @@
 
     <string name="label_ble">Bluetooth</string>
     <string name="label_location">Location Services</string>
+    <string name="label_camera">Camera</string>
 
     <string name="title_info">Never lose your stuff again</string>
     <string name="subtitle_info">FIND-E is a smart device that helps you \nkeep track of your most important belongings</string>
