--- a/FIND-E/app/src/main/res/layout/fragment_connection.xml
+++ b/FIND-E/app/src/main/res/layout/fragment_connection.xml
@@ -21,10 +21,10 @@
             android:layout_height="match_parent"
             android:layout_alignBottom="@+id/video_player"
             android:scaleType="fitXY"
-            android:src="@drawable/setup_stub" />
+            android:src="@drawable/pair_screen_stub" />
 
         <LinearLayout
-            android:id="@+id/setup_lt"
+            android:id="@+id/pair_lt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/video_player"
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/setup_label"
+                android:text="@string/pair_label"
                 android:textSize="17sp" />
 
             <io.sympli.find_e.ui.widget.TypefaceTextView
@@ -46,9 +46,9 @@
                 android:layout_marginTop="5dp"
                 android:alpha="0.7"
                 android:gravity="center"
-                android:text="@string/setup_text"
+                android:text="@string/pair_text"
                 android:textSize="15sp" />
         </LinearLayout>
-
     </android.support.percent.PercentRelativeLayout>
+
 </layout>
