--- a/FIND-E/app/src/main/res/values/colors.xml
+++ b/FIND-E/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFFFFF</color>
 
     <color name="light_blue">#4798bc</color>
     <color name="light_blue_pressed">#FF5FC5F2</color>
