added video and sounds

--- a/FIND-E/app/src/main/res/layout/fragment_main_usage.xml
+++ b/FIND-E/app/src/main/res/layout/fragment_main_usage.xml
@@ -6,8 +6,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <io.sympli.find_e.ui.widget.ButtonWidget
-            android:id="@+id/btn_view"
+        <FrameLayout
+            android:id="@+id/view_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_status_bar" />
@@ -52,11 +52,17 @@
                     android:textSize="13sp" />
             </LinearLayout>
 
-            <ImageView
+            <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/robot_smile" />
+                android:layout_weight="1">
+
+                <io.sympli.find_e.ui.widget.EmotionsImageView
+                    android:id="@+id/robot_iv_state"
+                    android:layout_width="@dimen/robo_width"
+                    android:layout_height="@dimen/robo_height"
+                    android:layout_gravity="bottom|center_horizontal" />
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
