--- a/FIND-E/app/src/main/res/layout/fragment_map.xml
+++ b/FIND-E/app/src/main/res/layout/fragment_map.xml
@@ -12,10 +12,10 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
-        android:onClick="null">
+        android:background="@android:color/black">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
