--- a/FIND-E/app/src/main/res/layout/activity_main.xml
+++ b/FIND-E/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            android:visibility="invisible"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+            android:visibility="invisible">
 
             <ImageView
                 android:id="@+id/toolbar_label"
