--- a/FIND-E/app/src/main/res/layout/fragment_splash.xml
+++ b/FIND-E/app/src/main/res/layout/fragment_splash.xml
@@ -14,6 +14,12 @@
             android:layout_height="match_parent"
             app:layout_heightPercent="45%" />
 
+        <View
+            android:id="@+id/stub"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_heightPercent="45%" />
+
         <RelativeLayout
             android:id="@+id/info_parent"
             android:layout_width="match_parent"
