refactored start screen

--- a/FIND-E/app/src/main/res/values/dimens.xml
+++ b/FIND-E/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_margin_small">8dp</dimen>
 
+    <dimen name="activity_vertical_margin_medium">12dp</dimen>
+
     <dimen name="btn_continue_top">16dp</dimen>
     <dimen name="btn_continue_bottom">16dp</dimen>
     <dimen name="btn_continue_left">50dp</dimen>
