--- a/FIND-E/app/src/main/res/layout/activity_main.xml
+++ b/FIND-E/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
@@ -42,14 +41,24 @@
             <FrameLayout
                 android:id="@+id/view_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/bottom_status_bar" />
+                android:layout_height="match_parent" />
 
             <io.sympli.find_e.ui.widget.states.ButtonView
                 android:id="@+id/btn_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true" />
+
+            <TextView
+                android:id="@+id/btn_msg"
+                style="@style/TextRegular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="@string/tap_to_beep"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
 
             <io.sympli.find_e.ui.widget.DialogMessageWidget
                 android:id="@+id/message_view"
@@ -129,12 +138,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <!--<FrameLayout-->
-            <!--android:id="@+id/main_container"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginTop="?attr/actionBarSize" />-->
 
         </RelativeLayout>
 
