--- a/FIND-E/app/src/main/res/layout/fragment_tips.xml
+++ b/FIND-E/app/src/main/res/layout/fragment_tips.xml
@@ -75,6 +75,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="25dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/btn_blue_selector"
                 android:clickable="true"
                 android:focusable="true"
