--- a/FIND-E/app/src/main/res/layout/fragment_map.xml
+++ b/FIND-E/app/src/main/res/layout/fragment_map.xml
@@ -80,6 +80,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="##"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -107,7 +108,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="5 minutes ago."
+                    android:text="##"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
             </LinearLayout>
