--- a/FIND-E/app/src/main/res/layout/view_permissions.xml
+++ b/FIND-E/app/src/main/res/layout/view_permissions.xml
@@ -16,6 +16,10 @@
         <variable
             name="cameraPermissionGranted"
             type="boolean" />
+
+        <variable
+            name="storagePermissionGranted"
+            type="boolean" />
     </data>
 
     <RelativeLayout
@@ -29,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:paddingBottom="70dp">
+            android:paddingBottom="100dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,7 +53,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="4"
+                    android:layout_weight="3.6"
                     android:gravity="center_vertical"
                     android:text="@string/label_ble"
                     android:textSize="17sp" />
@@ -93,7 +97,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="4"
+                    android:layout_weight="3.6"
                     android:gravity="center_vertical"
                     android:text="@string/label_location"
                     android:textSize="17sp" />
@@ -137,7 +141,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="4"
+                    android:layout_weight="3.6"
                     android:gravity="center_vertical"
                     android:text="@string/label_camera"
                     android:textSize="17sp" />
@@ -159,6 +163,50 @@
                     android:layout_weight="1"
                     android:checked="@{cameraPermissionGranted}"
                     android:enabled="@{!cameraPermissionGranted}"
+                    android:theme="@style/SwitchTheme" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_done_white_24dp"
+                    android:visibility="@{storagePermissionGranted ? View.VISIBLE : View.INVISIBLE}" />
+
+                <io.sympli.find_e.ui.widget.TypefaceTextView
+                    style="@style/TextRegularWhite"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="3.6"
+                    android:gravity="center_vertical"
+                    android:text="@string/label_storage"
+                    android:textSize="17sp" />
+
+                <ImageView
+                    android:id="@+id/storage_info"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_info_outline_white_24dp" />
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/storage_grant_switch"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:checked="@{storagePermissionGranted}"
+                    android:enabled="@{!storagePermissionGranted}"
                     android:theme="@style/SwitchTheme" />
 
             </LinearLayout>
